--- a/app/views/layouts/default_layout.html.erb
+++ b/app/views/layouts/default_layout.html.erb
@@ -8,6 +8,11 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementById("modalTitle").focus()</script>
+  
+  <script src="js/jquery-1.8.2.min.js"></script>
+  <script src="js/jquery.validationEngine.js"></script>
+  <script src="js/jquery.validationEngine-ja.js"></script>
+  <link rel="stylesheet" href="css/validationEngine.jquery.css">
 </head>
 <body>
 <header class="header_container">
