--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -54,9 +54,9 @@
           <button class="close" data-dismiss="modal">&times;</button>
           <p class="modal-title">ページを保存する</p>
         </div>
-        <%= form_for [@group, @page] do |f| %>
+        <%= form_for [@group, @page], html: {id: 'page_save'} do |f| %>
           <div class="modal-body">
-              <%= f.text_field :url, autofocus: true, :placeholder => 'http://...', html: {id: "modalTitle"}  %>
+              <%= f.text_field :url, autofocus: true, :placeholder => 'http://...', html: {id: "modalTitle"}, class: "validate[custom[url]]"  %>
               <script>document.getElementById("modalTitle").focus()</script>
           </div>
           <div class="modal-footer">
@@ -100,3 +100,10 @@
   <a data-toggle="modal" href="#myModal"><%= image_tag'plus.png' %></a>
   </div>
 </div>
+
+
+<script>
+  $(function(){
+    jQuery("#page_save").validationEngine();
+  });
+</script>
