--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,50 @@
-<h2>Change your password</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Shares</title>
+    <link href='https://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <body class="wide_screen clearfix">
+    <div class="row">
+    <div class="devise_wrapper col-sm-12 col-xs-12">
+      <div class="devise_container">
+          <p>Change your password</p>
+          <div class="mail_login">
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+              <%= devise_error_messages! %>
+              <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+              <div class="form-group">
+                <%= f.label :password, "新しいパスワード" %><br />
+                <%= f.password_field :password, autofocus: true, autocomplete: "off", :placeholder => '8文字以上' %>
+              </div>
+
+              <div class="form-group">
+                <%= f.label :password_confirmation, "パスワード確認用" %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => '8文字以上（確認用）' %>
+              </div>
+
+              <div class="actions form-group form_btn">
+                <%= f.submit "変更" %>
+              </div>
+            <% end %>
+          </div>
+
+          <div class="devise">
+            <%= render "devise/shared/links" %>
+          </div>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <footer class="footer_container">
+      <!-- <p>copyright2015</p> -->
+    </footer>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  </body>
+</html>
