--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shares</title>
+    <title>shars</title>
     <link href='https://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -12,17 +12,17 @@
   	<div class="container">
 		<div class="row">
 			<div id="header">
-				<a href="#features">Sharesとは</a>
+				<a href="#features">sharsとは</a>
 				<a href="/users/sign_in/">ログイン</a>
 				<a href="/users/sign_up/">サインアップ</a>
 			</div>
 	  		<div id="main_visual" class="message_wrapper col-sm-12 col-xs-12">
 	      		<div class="message">
-	        		<div><h1>Shares!</h1></div>
+	        		<div><h1>shars!</h1></div>
 	        		<div class="service_message">
 	          		<p>
 	            	友達、同僚との情報共有に困ったことありませんか？<br>
-	            	Shares!を使って、スムーズな情報共有を楽しみましょう。<br>
+	            	shars!を使って、スムーズな情報共有を楽しみましょう。<br>
 	          		</p>
 	        		</div>
 	      		</div>
