SPキーワード検索の文字サイズを変更

--- a/app/assets/stylesheets/default_application.scss
+++ b/app/assets/stylesheets/default_application.scss
@@ -224,7 +224,7 @@ li.search a:hover {
     font-size: 14px;
     background-color: transparent;
   }
-  
+
   .pc_menu {
     display: none;
   }
@@ -283,7 +283,7 @@ li.search a:hover {
     padding-left: 27px;
     border-radius: 5px;
     line-height: 2;
-    font-size: 100%;
+    font-size: 16px;
 }
 
 .modal-content {
